# vlm-edge-studio

./: .gitignore  AddModels.md  CMakeLists.txt  README.md  SBOM-vlm-edge-studio-v1.0.0.spdx.json  build.sh
include/: aafconnector.h  cameradetector.h  gstqmlglsink.h  gsttestglsink.h  submitprompt.h
qml/: AboutDialog.qml  main.qml  resources.qrc
src/: aafconnector.cpp  cameradetector.cpp  gstqmlglsink.cpp  gsttestglsink.cpp  main.cpp  submitprompt.cpp
vlm-edge-studio/DEBIAN/: control  postinst  postrm
vlm-edge-studio/usr/share/doc/vlm-edge-studio/: README.md
vlm-edge-studio/usr/share/vlm-edge-studio/: server_config.json
vlm-edge-studio/usr/share/vlm-edge-studio/scripts/: run_vlm_edge_studio
